fix missing table of contents and kinda repair its badly-broken CSS; all CSS still needs work.

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1,3 +1,8 @@
+h1.toc-title {
+    text-decoration-line: underline;
+    text-decoration-style: double;
+}
+
 a, abbr, acronym, address, applet, article, aside,
 audio, big, blockquote, body, canvas, caption, cite,
 code, dd, del, details, dfn, div, dl, dt, em, embed,
@@ -514,7 +519,6 @@ h1, h2, h3, h4, h5, h6 {
 .post-card-content-link {
     position: relative;
     display: block;
-    padding: 25px 25px 0;
     color: #15171a;
 }
 .post-card-content-link:hover {
